fix(intent): 修正参数顺序、转义符、category 统一为"通用"+ 多值支持
IntentService:
  - recognize参数顺序调整: (agentId, category, userInput, platform)
  - recognize(3参)对应调整: (agentId, category, userInput)

IntentNode:
  - 修复 input.getParameter("agentId", "default") 转义符反斜杠问题
  - 调用 recognize 改用新参数顺序 (agentId, category, userInput)

AgentStartupConfig (smart-agent):
  - 所有 intent 定义的 category 统一改为 "通用"
  - register() 的 columnKey 同步改为 "通用"

IntentDefinitionFactory:
  - 表值类型 IntentDefinition → List<IntentDefinition>
    支持同一 (agentId, category) 下注册多条定义
  - 新增 put() 辅助方法（追加模式）
  - 移除旧的 get()，新增 getFirst() 取首条
  - getByCategory()/getAll() 返回合并列表